project image grid

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -215,7 +215,7 @@ $zen-auto-include-item-base: false;
     //@include zen-grid-background();
   }
   #block-views-project-images-block {
-    @include zen-grid-container($context: grid-item);
+    @include zen-grid-container($context: none);
     @include zen-grid-item(5, 1);    
     @include zen-new-row();
   }
