--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -214,10 +214,10 @@ $zen-auto-include-item-base: false;
   #page {
     //@include zen-grid-background();
   }
-.region-highlighted {
-    @include zen-grid-container($context: none);
-    @include zen-grid-item(5, 1);    
-    @include zen-new-row();
+  .region-highlighted {
+  //  @include zen-grid-container($context: none);
+  //  @include zen-grid-item(5, 1);    
+  //  @include zen-new-row();
   }
   /**
    * The layout when there is only one sidebar, the left one.
