--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -32,9 +32,9 @@ $zen-auto-include-item-base: false;
  */
 #page,
 .region-bottom {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
+  margin-left: 20px;
+  margin-right: 20px;
+  max-width: 100%;
 }
 
 /* Apply the shared properties of grid items in a single, efficient ruleset. */
