project image grid

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -6,7 +6,8 @@
 
 #page {
   background: none repeat scroll 0 0 $light-gray;
-  margin-top: 2em;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 .header__site-name {
   font-size: 1em;
