page margins - nav layout

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -42,10 +42,11 @@
 }
 #block-system-main-menu {
   ul {
-  	  font-size: 6em;
-      line-height: 1em;
-      margin: 0;
+	  font-size: 6em;
+    line-height: 1em;
+    margin: 0;
 	  padding: 0;
+    text-transform: uppercase;
 	li {
 	  list-style: none;
 	  list-style-position: outside;
