--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -41,11 +41,13 @@
 	}
 }
 #block-system-main-menu {
+  position: fixed;
   ul {
 	  font-size: 6em;
     line-height: 1em;
     margin: 0;
 	  padding: 0;
+
     text-transform: uppercase;
 	li {
 	  list-style: none;
