--- a/css/styles.css
+++ b/css/styles.css
@@ -2431,7 +2431,7 @@ tr.selected td {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000344}}
 #block-system-main-menu ul {
-  font-size: 4em;
+  font-size: 4vw;
   line-height: 1em;
   margin: 0;
   padding: 0;
