--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -42,7 +42,7 @@
 }
 #block-system-main-menu {
   ul {
-	  font-size: 4em;
+	  font-size: 4vw;
     line-height: 1em;
     margin: 0;
 	  padding: 0;
