--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -9,7 +9,7 @@
   margin-bottom: 20px;
   margin-top: 20px;
 }
-.header__site-name {
+.header__site-name,#block-system-main-menu h2 {
   font-size: 1em;
   line-height: 1.5em;
 }
