logo moved to first sidebar

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -44,6 +44,9 @@
   font-size: 0.5em;
 }
 #block-system-main-menu {
+  h2 {
+    display: none;
+  }
   ul {
     font-size: 4em;
 	  font-size: 4.5vw;
