--- a/css/zen-grids/tests/tests/function-zen-unit-width.css
+++ b/css/zen-grids/tests/tests/function-zen-unit-width.css
@@ -2,7 +2,7 @@
  * @file
  * Test zen-unit-width()
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/function-zen-unit-width\.scss}line{font-family:\000038}}
+/* line 8, ../../../../sass-extensions/zen-grids/tests/tests/function-zen-unit-width.scss */
 #test-zen-unit-width {
   /* Test zen-unit-width() with default $zen-columns: 1 */
   width: 100%;
