--- a/css/zen-grids/tests/tests/zen-flow-item-width.css
+++ b/css/zen-grids/tests/tests/zen-flow-item-width.css
@@ -2,7 +2,7 @@
  * @file
  * Test zen-flow-item-width()
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/zen-flow-item-width\.scss}line{font-family:\000038}}
+/* line 8, ../../../../sass-extensions/zen-grids/tests/tests/zen-flow-item-width.scss */
 #test-zen-flow-item-width {
   /* Test zen-flow-item-width(1) without setting $parent-column-span */
   -moz-box-sizing: border-box;
