--- a/css/zen-grids/tests/tests/zen-grid-item-base.css
+++ b/css/zen-grids/tests/tests/zen-grid-item-base.css
@@ -2,7 +2,7 @@
  * @file
  * Test zen-grid-item-base()
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/zen-grid-item-base\.scss}line{font-family:\000038}}
+/* line 8, ../../../../sass-extensions/zen-grids/tests/tests/zen-grid-item-base.scss */
 #test-zen-grid-item-base {
   /* Test zen-grid-item-base() */
   padding-left: 10px;
