--- a/css/zen-grids/tests/tests/zen-grid-item.css
+++ b/css/zen-grids/tests/tests/zen-grid-item.css
@@ -2,7 +2,7 @@
  * @file
  * Test zen-grid-item()
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/zen-grid-item\.scss}line{font-family:\000038}}
+/* line 8, ../../../../sass-extensions/zen-grids/tests/tests/zen-grid-item.scss */
 #test-zen-grid-item {
   /* Test zen-grid-item(6, 4) with 12 column grid and 20px gutter */
   float: left;
