--- a/css/zen-grids/tests/tests/zen-new-row.css
+++ b/css/zen-grids/tests/tests/zen-new-row.css
@@ -2,7 +2,7 @@
  * @file
  * Test zen-new-row()
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/zen-new-row\.scss}line{font-family:\000038}}
+/* line 8, ../../../../sass-extensions/zen-grids/tests/tests/zen-new-row.scss */
 #test-zen-new-row {
   /* Test zen-new-row() */
   clear: left;
