--- a/css/zen-grids/tests/tests/compass-compatibility.css
+++ b/css/zen-grids/tests/tests/compass-compatibility.css
@@ -2,69 +2,69 @@
  * @file
  * Test zen-grid-container() and zen-grid-item() after @import compass.
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/compass-compatibility\.scss}line{font-family:\0000311}}
+/* line 11, ../../../../sass-extensions/zen-grids/tests/tests/compass-compatibility.scss */
 #test-zen-grid-container {
   /* Test zen-grid-container() */
   *position: relative;
   *zoom: 1;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000343}}
+/* line 43, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container:before, #test-zen-grid-container:after {
   content: "";
   display: table;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000348}}
+/* line 48, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container:after {
   clear: both;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/compass-compatibility\.scss}line{font-family:\0000316}}
+/* line 16, ../../../../sass-extensions/zen-grids/tests/tests/compass-compatibility.scss */
 #test-zen-grid-container-2 {
   /* Test zen-grid-container() with IE 8 support */
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000343}}
+/* line 43, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container-2:before, #test-zen-grid-container-2:after {
   content: "";
   display: table;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000348}}
+/* line 48, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container-2:after {
   clear: both;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/compass-compatibility\.scss}line{font-family:\0000323}}
+/* line 23, ../../../../sass-extensions/zen-grids/tests/tests/compass-compatibility.scss */
 #test-zen-grid-container-3 {
   /* Test zen-grid-container() with IE 7 support */
   *position: relative;
   *zoom: 1;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000343}}
+/* line 43, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container-3:before, #test-zen-grid-container-3:after {
   content: "";
   display: table;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000348}}
+/* line 48, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container-3:after {
   clear: both;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/compass-compatibility\.scss}line{font-family:\0000330}}
+/* line 30, ../../../../sass-extensions/zen-grids/tests/tests/compass-compatibility.scss */
 #test-zen-grid-container-4 {
   /* Test zen-grid-container() with IE 6 support */
   *position: relative;
   *zoom: 1;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000343}}
+/* line 43, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container-4:before, #test-zen-grid-container-4:after {
   content: "";
   display: table;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/zen-grids\/_grids\.scss}line{font-family:\0000348}}
+/* line 48, ../../../../sass-extensions/zen-grids/zen-grids/_grids.scss */
 #test-zen-grid-container-4:after {
   clear: both;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/compass-compatibility\.scss}line{font-family:\0000337}}
+/* line 37, ../../../../sass-extensions/zen-grids/tests/tests/compass-compatibility.scss */
 #test-zen-grid-item {
   /* Test zen-grid-item(1, 1) */
   float: left;
