--- a/css/zen-grids/tests/tests/zen-float.css
+++ b/css/zen-grids/tests/tests/zen-float.css
@@ -2,7 +2,7 @@
  * @file
  * Test zen-float()
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass-extensions\/zen-grids\/tests\/tests\/zen-float\.scss}line{font-family:\000038}}
+/* line 8, ../../../../sass-extensions/zen-grids/tests/tests/zen-float.scss */
 #test-zen-float {
   /* Test zen-float() */
   float: left;
