--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -209,7 +209,7 @@ $zen-auto-include-item-base: false;
  */
 @media all and (min-width: 960px) {
 
-  $zen-columns: 5;
+  $zen-columns: 5!global;
 
   #page {
     @include zen-grid-background();
