masonry item center

--- a/css/styles.css
+++ b/css/styles.css
@@ -2516,6 +2516,7 @@ tr.selected td {
 /* line 104, ../sass/_varisco.scss */
 .masonry-item {
   width: 45%;
+  text-align: center;
 }
 
 /* @import "theme-B"; */
