--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -34,7 +34,7 @@ $zen-auto-include-item-base: false;
 .region-bottom {
   margin-left: 20px;
   margin-right: 20px;
-  max-width: 100%;
+  max-width: 1200px;
 }
 
 /* Apply the shared properties of grid items in a single, efficient ruleset. */
